[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/vehicles/hummer/weapon.png" type="Texture" id=1]
[ext_resource path="res://assets/sounds/mini_gun/01-start.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/mini_gun/03-end.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/mini_gun/02-middle.mp3" type="AudioStream" id=4]
[ext_resource path="res://entities/vehicle_guns/MiniGun.gd" type="Script" id=5]

[node name="Weapon" type="Node2D"]
script = ExtResource( 5 )

[node name="weapon" type="Sprite" parent="."]
position = Vector2( 79.1972, -43.7118 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="MiddleShotAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="StartShotAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="EndShotAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
